--- a/web/app/cenozo/history.tpl.html
+++ b/web/app/cenozo/history.tpl.html
@@ -6,7 +6,7 @@
          ng-click="refresh( true )"
          tooltip="Click to refresh data"
          tooltip-placement="left"></i>
-      {{ model.module.name.singular.ucWords() }} History for {{ name }}
+      {{ model.module.name.singular|cnUCWords }} History for {{ name }}
       <span ng-if="isLoading">(Loading&hellip;)</span>
     </h4>
   </div>
@@ -16,14 +16,14 @@
             ng-if="model.viewNotes"
             ng-click="model.viewNotes()">Notes</button>
     <button type="button" class="btn btn-primary" ng-click="model.viewRecord()">
-      View {{ model.module.name.singular.ucWords() }}
+      View {{ model.module.name.singular|cnUCWords }}
     </button>
   </div>
   <div class="container-fluid">
     <cn-loading ng-if="isLoading"></cn-loading>
     <div class="spacer" ng-if="!isLoading">
       <p class="text-info" style="margin-top: 1em;">
-        {{ model.module.name.singular.ucWords() }} history shows all events and operations related to
+        {{ model.module.name.singular|cnUCWords }} history shows all events and operations related to
         {{ model.module.name.plural }} listing them from most to least recent.
         You may filter which categories to display by using the buttons below.
       </p>
@@ -77,7 +77,7 @@
             ng-if="model.viewNotes"
             ng-click="model.viewNotes()">Notes</button>
     <button type="button" class="btn btn-primary" ng-click="model.viewRecord()">
-      View {{ model.module.name.singular.ucWords() }}
+      View {{ model.module.name.singular|cnUCWords }}
     </button>
   </div>
 </div>
