--- a/web/app/cenozo/notes.tpl.html
+++ b/web/app/cenozo/notes.tpl.html
@@ -6,7 +6,7 @@
          ng-click="refresh( true )"
          tooltip="Click to refresh data"
          tooltip-placement="left"></i>
-      {{ model.module.name.singular.ucWords() }} Notes
+      {{ model.module.name.singular|cnUCWords }} Notes
       <span ng-if="model.isLoading">(Loading&hellip;)</span>
     </h4>
   </div>
@@ -16,14 +16,14 @@
             ng-if="model.viewHistory"
             ng-click="model.viewHistory()">History</button>
     <button type="button" class="btn btn-primary" ng-click="model.viewRecord()">
-      View {{ model.module.name.singular.ucWords() }}
+      View {{ model.module.name.singular|cnUCWords }}
     </button>
   </div>
   <div class="container-fluid">
     <cn-loading ng-if="model.isLoading"></cn-loading>
     <div class="spacer" ng-if="!model.isLoading">
       <p class="text-info" style="margin-top: 1em;">
-        {{ model.module.name.singular.ucWords() }} notes are listed from most recent to least recent,
+        {{ model.module.name.singular|cnUCWords }} notes are listed from most recent to least recent,
         with "sticky" notes always showing at the top.
       </p>
       <hr />
@@ -97,7 +97,7 @@
             ng-if="model.viewHistory"
             ng-click="model.viewHistory()">History</button>
     <button type="button" class="btn btn-primary" ng-click="model.viewRecord()">
-      View {{ model.module.name.singular.ucWords() }}
+      View {{ model.module.name.singular|cnUCWords }}
     </button>
   </div>
 </div>
