--- a/web/app/overview/view.tpl.html
+++ b/web/app/overview/view.tpl.html
@@ -2,6 +2,22 @@
 <div ng-if="!model.viewModel.isLoading" class="container-fluid vertical-spacer allow-select">
   <h4>
     <div class="horizontal-spacer pull-right">
+      <span class="dropdown report-dropdown" style="margin-right: 4px;">
+        <i class="glyphicon glyphicon-file glyph-hover btn-header"
+           ng-class="!model.viewModel.isReportLoading ? 'btn-primary' : 'glyph-disabled'"
+           id="reportTypeList"
+           ng-click="toggleReportTypeDropdown(); $event.stopPropagation()"
+           data-toggle="dropdown"
+           tooltip="Click to download list as a report"
+           tooltip-placement="left"></i>
+        <ul ng-if="!model.viewModel.isReportLoading"
+            class="dropdown-menu dropdown-menu-right"
+            aria-labelledby="reportTypeList">
+          <li><a ng-click="getReport( 'csv' ); $event.stopPropagation()">CSV</a></li>
+          <li><a ng-click="getReport( 'xlsx' ); $event.stopPropagation()">Excel</a></li>
+          <li><a ng-click="getReport( 'ods' ); $event.stopPropagation()">LibreOffice</a></li>
+        </ul>
+      </span>
       <i class="glyphicon glyphicon-refresh glyph-hover btn-primary btn-header"
          style="cursor: pointer;"
          ng-click="refresh()"
