Fixing color bug in record-list template

--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -95,7 +95,7 @@
                 </li>
               </ul>
             </div>
-            <div class="text-center text-info full-width"
+            <div class="text-center full-width"
                  ng-if="0 < model.listModel.columnRestrictLists[column.key].length">
               <p class="restrict-description"
                  ng-click="setRestrictList( column.key )"
