Adding new showCancel option to CnModalPasswordFactory

--- a/web/app/cenozo/modal-password.tpl.html
+++ b/web/app/cenozo/modal-password.tpl.html
@@ -72,7 +72,7 @@
     <button type="button" class="btn btn-info pull-left" ng-click="toggleShowPasswords()">
       {{ showPasswords ? 'Hide' : 'Show' }} Passwords
     </button>
-    <button type="button" class="btn btn-default" ng-if="confirm" ng-click="cancel()">Cancel</button>
+    <button type="button" class="btn btn-default" ng-if="showCancel" ng-click="cancel()">Cancel</button>
     <button type="submit" class="btn btn-primary"
             ng-disabled="!newPass1 || !newPass2 || newPass1 != newPass2 || form.$invalid">OK</button>
   </div>
