Fixing bugs in overview module
Making sure to handle overviews with no root nodes.

--- a/web/app/overview/view.tpl.html
+++ b/web/app/overview/view.tpl.html
@@ -27,6 +27,9 @@
     {{ model.viewModel.record.description }}
   </h4>
   <hr/>
+  <div ng-if="!model.viewModel.record.data.value" class="alert alert-warning">
+    There is no data currently available.
+  </div>
   <div ng-repeat="item1 in model.viewModel.record.data.value">
     <!-- value is not an array -->
     <div ng-if="!(item1.value|cnIsArray)"
