--- a/web/app/export/view.tpl.html
+++ b/web/app/export/view.tpl.html
@@ -1,4 +1,8 @@
 <cn-record-view model="model"></cn-record-view>
+<div class="vertical-spacer" ng-repeat="child in model.module.children">
+  <cn-record-list ng-if="model.viewModel[child.subject.camel+'Model']"
+                  model="model.viewModel[child.subject.camel+'Model']"></cn-record-list>
+</div>
 <div class="record-view rounded vertical-spacer">
   <div class="container-fluid bg-primary rounded-top">
     <h4>
