Fixing bug with spaces in cn-modal-password

--- a/web/app/cenozo/modal-password.tpl.html
+++ b/web/app/cenozo/modal-password.tpl.html
@@ -17,6 +17,7 @@
           <input id="currentPass"
                  name="currentPass"
                  ng-model="currentPass"
+                 ng-trim="false"
                  class="form-control"
                  type="{{ showPasswords ? 'text' : 'password' }}" />
         </div>
@@ -34,6 +35,7 @@
           <input id="newPass1"
                  name="newPass1"
                  ng-model="newPass1"
+                 ng-trim="false"
                  ng-change="checkPasswordMatch()"
                  class="form-control"
                  type="{{ showPasswords ? 'text' : 'password' }}"
@@ -56,6 +58,7 @@
           <input id="newPass2"
                  name="newPass2"
                  ng-model="newPass2"
+                 ng-trim="false"
                  ng-change="checkPasswordMatch()"
                  class="form-control"
                  type="{{ showPasswords ? 'text' : 'password' }}"
