--- a/web/app/export/view.tpl.html
+++ b/web/app/export/view.tpl.html
@@ -46,7 +46,7 @@
         </div>
         <div class="col-sm-2 text-center"><strong>{{ item.table_name|cnUCWords }}</strong></div>
         <div class="col-sm-2 text-center"><strong>{{ item.column.title }}</strong></div>
-        <div class="col-sm-5">
+        <div class="col-sm-4 col-slim-right">
           <select class="form-control"
                   ng-if="model.viewModel.subtypeList[item.table_name]"
                   ng-model="item.subtype"
@@ -55,10 +55,22 @@
                   ng-options="obj.key as obj.name for obj in model.viewModel.subtypeList[item.table_name]">
           </select>
         </div>
-        <div class="col-sm-1">
-          <button class="btn btn-danger pull-right" ng-click="model.viewModel.removeColumn( $index )">
-            <i class="glyphicon glyphicon-remove"></i>
-          </button>
+        <div class="col-sm-2 col-slim-left">
+          <div class="btn-group pull-right" style="white-space: nowrap;">
+            <button class="btn"
+                    tooltip="Whether to include the column in the downloaded file."
+                    tooltip-placement="left"
+                    ng-click="model.viewModel.toggleInclude( $index )">
+              <i class="glyphicon"
+                 ng-class="item.include ? 'glyphicon-eye-open' : 'glyphicon-eye-close'"></i>
+            </button>
+            <button class="btn btn-danger"
+                    tooltip="Remove Column"
+                    tooltip-placement="left"
+                    ng-click="model.viewModel.removeColumn( $index )">
+              <i class="glyphicon glyphicon-remove"></i>
+            </button>
+          </div>
         </div>
       </div>
       <hr />
@@ -169,7 +181,10 @@
                   ng-options="o.value as o.name for o in item.restriction.enumList"></select>
         </div>
         <div class="col-sm-1">
-          <button class="btn btn-danger pull-right" ng-click="model.viewModel.removeRestriction( $index )">
+          <button class="btn btn-danger pull-right"
+                  tooltip="Remove Restriction"
+                  tooltip-placement="left"
+                  ng-click="model.viewModel.removeRestriction( $index )">
             <i class="glyphicon glyphicon-remove"></i>
           </button>
         </div>
