--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -55,7 +55,7 @@
                 type="button"
                 class="btn btn-primary"
                 ng-click="viewParent( parent.subject )">
-          View {{ parent.subject.replace( '_', ' ' ) | cnUCWords }}
+          View {{ parentName( parent.subject ) }}
         </button>
       </div>
     </div>
@@ -460,7 +460,7 @@
                 type="button"
                 class="btn btn-primary"
                 ng-click="viewParent( parent.subject )">
-          View {{ parent.subject.replace( '_', ' ' ) | cnUCWords }}
+          View {{ parentName( parent.subject ) }}
         </button>
       </div>
     </div>
