--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -129,7 +129,10 @@
                                     model.listModel.minOffset, model.listModel.cache.length )
                        | limitTo: model.listModel.paginationModel.itemsPerPage"
             ng-click="model.listModel.chooseMode ? chooseRecord( record ) : selectRecord( record )"
-            ng-class="{ success:model.listModel.chooseMode && record.chosen }">
+            ng-class="{
+              success:model.listModel.chooseMode && record.chosen,
+              highlight:record.$highlight
+            }">
             <td ng-repeat="column in dataArray"
                 ng-if="undefined === column.isIncluded || column.isIncluded( $state, model )"
                 ng-style="column.width && {'width': column.width}"
