Making message close button autoselect

--- a/web/app/cenozo/modal-message.tpl.html
+++ b/web/app/cenozo/modal-message.tpl.html
@@ -6,7 +6,7 @@
     <span style="white-space: pre-wrap;">{{ message }}</span>
   </div>
   <div class="modal-footer bg-info" ng-if="!block">
-    <button type="submit" class="btn btn-primary">Close</button>
+    <button type="submit" cn-autofocus class="btn btn-primary">Close</button>
   </div>
   <progressbar ng-if="block"
                class="progress-striped active rounded-bottom"
